# minenv

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
src/dotenv/: __init__.py
src/minenv/: __init__.py
