[project]
name = "dotenv"
version = "0.1.0"
description = "A minimal module for working with dotenv files."
readme = "README.md"
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" }
]
requires-python = ">=3.6"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
