[project]
name = "minenv"
version = "0.1.0"
description = "A minimal module for working with dotenv files."
readme = "README.md"
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["minimal", "dotenv", "env"]

[project.urls]
Repository = "https://github.com/stefanlight8/minenv.git"
Issues = "https://github.com/stefanlight8/minenv/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
